[project]
name = "ham"
version = "0.1.0"
description = ""
authors = [
    {name = "Arie White",email = "zetpos9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)"
]

[tool.poetry]
packages = [{include = "ham", from = "src"}]

[tool.poetry.scripts]
ham = "ham.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
